# imhotep

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml
demo/: INSTALLATION.md  PACKAGE_SUMMARY.md  README.md  requirements.txt  setup.py  test_validation_package.py
demo/examples/: __init__.py  basic_usage.py
demo/imhotep_validation/: __init__.py  main.py
demo/imhotep_validation/core/: __init__.py  comprehensive_validator.py  quick_validator.py  validation_base.py
demo/imhotep_validation/utils/: __init__.py  statistical_analysis.py
demo/imhotep_validation/validators/: __init__.py  bmd_information_catalysis.py  quantum_membrane_dynamics.py  self_awareness.py  universal_problem_solving.py
docs/: Gemfile  NEURAL_INTERFACE_README.md  _config.yml  api-reference.md  examples.md  getting-started.md  imhotep.tex  index.md  intracellular-dynamics.tex  neural_architecture.md  neural_interface_guide.md  system.md  theory.md  turbulence_compiler.md
docs/.github/workflows/: deploy.yml  pages.yml
docs/_layouts/: default.html
docs/_site/: NEURAL_INTERFACE_README.html  api-reference.html  examples.html  feed.xml  getting-started.html  index.html  neural_architecture.html  neural_interface_guide.html  neuron.html  neuron.md  robots.txt  self-aware-neural-networks.html  sitemap.xml  system.html  theory.html  transduction.html  transduction.md  turbulence_compiler.html  turbulence_syntax.html  turbulence_syntax.md
docs/_site/assets/css/: style.css  style.scss
docs/assets/css/: style.scss
docs/assets/js/: main.js
examples/: metabolomic_diabetes.fs  metabolomic_diabetes.ghd  metabolomic_diabetes.hre  metabolomic_diabetes.trb  neural_consciousness_demo.trb  neural_consciousness_demo.txt  self_aware_diabetes_analysis.trb  self_aware_neural_consciousness_demo.trb
src/: config.rs  error.rs  lib.rs
src/consciousness/: authenticity.rs  binding.rs  emergence.rs  input.rs  insights.rs  mod.rs  results.rs  runtime.rs  state.rs
src/cross_modal/: mod.rs
src/external_systems/: mod.rs
src/metrics/: mod.rs
src/quantum/: coherence.rs  decoherence.rs  enaqt.rs  entanglement.rs  fire_wavelength.rs  ion_field.rs  membrane.rs  mod.rs  optimization.rs  transport.rs
src/specialized_systems/: autobahn.rs  bene_gesserit.rs  coordination.rs  four_sided_triangle.rs  heihachi.rs  helicopter.rs  izinyoka.rs  kwasa_kwasa.rs  mod.rs  nebuchanezzar.rs
src/turbulance/: mod.rs  neural_executor.rs  neural_interface.rs  neural_syntax.rs
src/validation/: mod.rs
